--- a/package.json
+++ b/package.json
@@ -18,6 +18,17 @@
   },
   "homepage": "https://github.com/gonpombo/Nodelistar#readme",
   "dependencies": {
-    "express": "^4.12.4"
+    "express": "^4.12.4",
+    "body-parser": "^1.5.2",
+    "multer": "0.1.6",
+    "method-override": "2.2.0",
+    "errorhandler": "1.2.1",
+    "mongodb": "2.0.6",
+    "q": "1.0.1",
+    "socket.io": "1.1.0",
+    "compression": "1.2.0",
+    "http": "",
+    "lodash": "",
+    "domain-middleware": ""
   }
 }
